--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -29,7 +29,10 @@
             <!-- icon -->
             <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <a href="/checkout/" class="checkout"><i class="fa-solid fa-cart-shopping"></i></a>
+                <div class="cart-item">
+                    <a href="/checkout/" class="checkout"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <div class="cart-count"></div>
+                </div>
                 <i class="fa-solid fa-bell"></i>
             </div>
             <!-- hamburgger -->
