--- a/Ebackend/template/index.html
+++ b/Ebackend/template/index.html
@@ -177,7 +177,7 @@
             {%endfor%}
         </section>
         <!-- living room -->
-        <h1 id="living-room">Living_room</h1>
+        <h1 id="living-room">Living Room</h1>
         <section class="living-room">
             {%for product in living_room%}
                 <div class="product-cont" id="product">
