cart product removal

--- a/Ebackend/template/index.html
+++ b/Ebackend/template/index.html
@@ -37,6 +37,7 @@
                         on the navigation menu above.
                      </p>
                 </div>
+                <div class="remove-cart">Remove item</div>
             </div>
         </div>
 
@@ -73,6 +74,7 @@
                         on the navigation menu above.
                      </p>
                 </div>
+                <div class="remove-cart">Remove item</div>
             </div>
         </div>
     </div>
@@ -164,6 +166,7 @@
                                     on the navigation menu above.
                                 </p>
                             </div>
+                            <div class="remove-cart">Remove item</div>
                         </div>
                     </div>
                 </div>
@@ -203,6 +206,7 @@
                                     on the navigation menu above.
                                 </p>
                             </div>
+                            <div class="remove-cart">Remove item</div>
                         </div>
                     </div>
                 </div>
@@ -242,6 +246,7 @@
                                     on the navigation menu above.
                                 </p>
                             </div>
+                            <div class="remove-cart">Remove item</div>
                         </div>
                     </div>
                 </div>
