--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -190,6 +190,7 @@ form.desc-btn{
     align-self: center;
 }
 
+/* the three buttons for product dynamics */
 .buy{
     background-color: orange;
     text-decoration: none;
@@ -217,13 +218,30 @@ form.desc-btn{
     cursor: pointer;
 }
 
+.remove-cart{
+    display:flex;
+    justify-content: center;
+    text-align: center;
+    width: fit-content;
+    padding: 8px;
+    height: fit-content;
+    font-size: 15px;
+    background-color: red;
+    color: white;
+    border-radius: 10px;
+    margin-left: -50px;
+    margin-top: -10px;
+    cursor: pointer;
+}
+
 /* the add to cart div */
 .buy-nd-cart{
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
     align-self: center;
+    width: 100%;
 }
 
 .mordern-cont >.buy-nd-cart{ /*specific to 'mordern container alone'*/
@@ -414,8 +432,13 @@ form.desc-btn{
     grid-template-columns: repeat(4, 1fr);
     gap: 15px;
     margin: auto;
-    width: 93%;
+    width: 100%;
 }
+
+.product-cont{
+    width: 100%;
+}
+
 .product{
     display: flex;
     flex-direction: column;
@@ -424,6 +447,7 @@ form.desc-btn{
     text-align: left;
     border: solid 1px orange;
     border-radius: 10px;
+    width: 100%;
     padding:5px;
 }
 .product >img{/*images within section at the index page*/
