--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -219,7 +219,7 @@ form.desc-btn{
 }
 
 .remove-cart{
-    display:flex;
+    display:none;
     justify-content: center;
     text-align: center;
     width: fit-content;
@@ -241,7 +241,7 @@ form.desc-btn{
     justify-content: center;
     align-items: center;
     align-self: center;
-    width: 100%;
+    width:fit-content;
 }
 
 .mordern-cont >.buy-nd-cart{ /*specific to 'mordern container alone'*/
