remove cart functionality

--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -30,8 +30,7 @@
             <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <div class="cart-item">
-                    <a href="/checkout/" class="checkout"><i class="fa-solid fa-cart-shopping"></i></a>
-                    <div class="cart-count">{%if session_data%}{{session_data}}{%endif%}</div>
+                    <a href="/checkout/" class="checkout"><i class="fa-solid fa-cart-shopping"></i><div class="cart-count">{%if session_data%}{{session_data}}{%endif%}</div></a>
                 </div>
                 <i class="fa-solid fa-bell"></i>
             </div>
