--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -75,6 +75,8 @@ header{
 }
 
 .checkout{ /*the anchor tag that hold cart icon*/
+    display: flex;
+    align-items: center;
     text-decoration:none;
     color: black;
     /* z-index: 400; */
