--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -84,7 +84,7 @@
             <p id="p-name">{{product.product_name}}</p>
             <div class="quantity">
                 <label for="quantity">Quantity</label>
-                <input type="number" id="quantity-tag" name="quantity">
+                <input type="number" id="quantity-tag" name="quantity" value="1">
             </div>
         {%else%}
             {%if session_product%}
