--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -221,6 +221,7 @@ overflow-x: scroll;
     margin-bottom: 30px;
 }
 
+/* parent container housing chosen product details */
 .your-order{
     display: flex;
     flex-direction: column;
@@ -230,12 +231,35 @@ overflow-x: scroll;
     align-self: flex-start;
 }
 
-.your-order > *{
-    margin: 7px;
+.cart-items{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: fit-content;
+    height: fit-content;
+    padding: 2px;
+    border:solid orange 1px;
+    border-radius: 20px;
 }
-.your-order > #p-img{
-    width:100%;
-    height: 100%;
+
+.retrieved{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.retrieved > *{
+    margin: 5px;
+}
+
+/* .your-order > *{
+    
+} */
+.retrieved > #p-img{
+    width:30%;
+    height: 30%;
     border-radius: 10px;
 }
 
