--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -80,16 +80,21 @@
         <!-- Display text based on whether it's a direct request or from product-->
         {%if request.GET.product_id%}
             <h3 id="your-order">Your Order</h3>
-            <img src="{{product.product_image.url}}" alt="your item" id="p-img">
-            <p id="p-name">{{product.product_name}}</p>
-            <div class="quantity">
-                <label for="quantity">Quantity</label>
-                <input type="number" id="quantity-tag" name="quantity" value="1">
+            <div class="cart-items">
+                <div class="retrieved">
+                    <img src="{{product.product_image.url}}" alt="your item" id="p-img">
+                    <p id="p-name">{{product.product_name}}</p>
+                    <div class="quantity">
+                        <label for="quantity">Quantity</label>
+                        <input type="number" id="quantity-tag" name="quantity" value="1">
+                        <input type="button" name="remove-prod" value="Remove Product">
+                    </div>
+                </div>
             </div>
         {%else%}
             {%if retrieved_products%}
+                <h3 id="your-order">All Items in Your Cart</h3>
                 <div class="cart-items">
-                    <h3 id="your-order">All Items in Your Cart</h3>
                     {%for prod in retrieved_products%}
                         <div class="retrieved">
                             <img src="{{prod.product_image.url}}" alt="your item" id="p-img">
@@ -97,6 +102,7 @@
                             <div class="quantity">
                                 <label for="quantity">Quantity</label>
                                 <input type="number" id="quantity-tag" name="quantity" value="1">
+                                <input type="button" name="remove-prod" value="Remove Product" class="remove-cart" style="display:flex;">
                             </div>
                         </div>
                     {%endfor%}
