--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -238,9 +238,14 @@ overflow-x: scroll;
     align-items: center;
     width: fit-content;
     height: fit-content;
-    padding: 2px;
+    padding: 5px;
     border:solid orange 1px;
     border-radius: 20px;
+}
+
+.cart-items >*{
+    margin:-10px;
+    margin-top: 5px;
 }
 
 .retrieved{
@@ -252,15 +257,26 @@ overflow-x: scroll;
 
 .retrieved > *{
     margin: 5px;
+    font-weight: 100;
+    font-size: 10px;
 }
 
+.remove-in-checkout{
+    background-color: tomato;
+    border-radius: 10px;
+    width: fit-content;
+    padding: 5px;
+    color: white;
+    font-size: 10px;
+    text-align: center;
+}
 /* .your-order > *{
     
 } */
 .retrieved > #p-img{
     width:30%;
     height: 30%;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 .quantity{
