product removal on the checkout, implemented!

--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -269,6 +269,7 @@ overflow-x: scroll;
     color: white;
     font-size: 10px;
     text-align: center;
+    cursor: pointer;
 }
 /* .your-order > *{
     
