--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -103,7 +103,10 @@
                             <div class="quantity">
                                 <label for="quantity">Quantity</label>
                                 <input type="number" id="quantity-tag" name="quantity" value="1">
-                                <input type="button" name="remove-prod" value="Remove Product" class="remove-in-checkout">
+                                <form action="/remove_from_cart/" method="get">
+                                    <input type="hidden" name="prod-in-checkout" value="{{prod.id}}">
+                                    <input type="submit" name="remove-prod" value="Remove Product" class="remove-in-checkout">
+                                </form>
                             </div>
                         </div>
                     {%endfor%}
