--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="copy-wright">
-            <a href='' id="copy-right">CopyWright Bchair</a>
+            <a href='' id="copy-right">Copyright Bchair</a>
             <a href='' id="terms-of-service">Terms of Services</a>
         </div>
     </footer>
