--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -89,7 +89,7 @@
                         <label for="quantity">Quantity</label>
                         <input type="number" id="quantity-tag" name="quantity" value="1">
                         <form action="/remove_from_cart/" method="get">
-                            <input type="hidden" name="prod-in-checkout" value="{{product.id}}">
+                            <input type="hidden" name="prod-in-checkout" value="{{request.GET.product_id}}">
                             <input type="submit" name="remove-prod" value="Remove Product" class="remove-in-checkout">
                         </form>
                     </div>
