--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -115,6 +115,9 @@
                         </div>
                     {%endfor%}
                 </div>
+                <div class="total">
+                    Total:
+                </div>
             {%else%}
                 <h3 id="no-item">{{no_item}}</h3>
                 <p id="instruct">Items you choose should appear here.</p>
