--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -74,4 +74,5 @@
         </div>
     </footer>
     <script src="../static/js/index.js"></script>
+    <script src="../static/js/func.js"></script>
 </html>
