--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -54,7 +54,7 @@
     </body>
     <footer>
         <div class="Links">
-            <h5 class="quick-links" onclick="displayLink()">Quick Links <i class="fa-solid fa-angle-down"></i></h5>
+            <h5 class="quick-links" onclick="displayLink()">Quick Links <i class="fa-solid fa-angle-down reveal"></i></h5>
             <div class="b-seller">
                 <a href='' id="be-a-vendor"> Be a vendor</a>
                 <a href='' id="registered-buyer">Register as a buyer</a>
