work in progress

--- a/Ebackend/template/profile.html
+++ b/Ebackend/template/profile.html
@@ -25,7 +25,7 @@
                     {%for item in name.vendorprofile.product_set.all%}
                         <div class="products">
                             <div id="name-nd-toggle-prod">
-                                <h5 id="prod-name" style="margin: 7px;">{{item.product_name}}</h5> <i class="fa-solid fa-angle-down prod-tog"></i>
+                                <div class="p-name-togCont"><h5 id="prod-name" style="margin: 7px;">{{item.product_name}}</h5> <i class="fa-solid fa-angle-down prod-tog"></i></div>
                                 <!-- edit product elements-> displays and hides when the icon above is toggled -->
                                 <div class="edits">
                                     <div class="optionz remove-prod">Remove Product</div>
@@ -39,7 +39,7 @@
                                         <button type="submit" id="removeProd">remove_prod</button>
                                     </form>
                                     <!-- form to update(edit) product details -->
-                                    <form action="{%url 'remove-prod'%}" method="get" enctype="multipart/form-data" class="edit-form">
+                                    <form action="{%url 'edit-prod'%}" method="get" enctype="multipart/form-data" class="edit-form">
                                         <input type="text"  name="product_name" value="{{item.product_name}}" id="change-name">
                                         <input type="text" name="price" id="" value="{{item.price}}" id="change-price">
                                         <textarea type="text" name="description" value="" cols="8" rows="3" id="change-description">{{item.description}} </textarea>
