--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -601,7 +601,8 @@ footer > div{
 /* product toggle container and its child items */
 #name-nd-toggle-prod{
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: fit-content;
     height: fit-content;
@@ -610,6 +611,12 @@ footer > div{
     position: relative;
     right: auto;
     left: auto;
+}
+
+.p-name-togCont{/*container housing the product name and the 'edit' toggleable icon*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .optionz{
